crates/loxia-tui/src/modals/snapshots/loxia_tui__modals__keymap_editor__tests__keymap_editor_snapshot_capturing.snap
---
source: crates/loxia-tui/src/modals/keymap_editor.rs
assertion_line: 475
expression: rendered
---
Buffer {
    area: Rect { x: 0, y: 0, width: 100, height: 40 },
    content: [
        "                                                                                                    ",
        "┌KEYBINDINGS───────────────────────────────────────────────────────────────────────────────────────┐",
        "│NAVIGATION                                                                                        │",
        "│  Column Down              j                                                                      │",
        "│  Column Up                k                                                                      │",
        "│  Column Left              h                                                                      │",
        "│  Column Right             l                                                                      │",
        "│  Half Page Up             ctrl+u                                                                 │",
        "│  Half Page Down           ctrl+d                                                                 │",
        "│  Go To Top                g g                                                                    │",
        "│  Go To Bottom             G                                                                      │",
        "│  Back                     backspace                                                              │",
        "│  Next Tab                 tab                                                                    │",
        "│  Prev Tab                 shift+tab                                                              │",
        "│  Jump Tab 1               alt+1                                                                  │",
        "│  Jump Tab 2               alt+2                                                                  │",
        "│  Jump Tab 3               alt+3                                                                  │",
        "│  Jump Tab 4               alt+4                                                                  │",
        "│  Jump Tab 5               alt+5                                                                  │",
        "│  Jump Tab 6               alt+6                                                                  │",
        "│  Jump Tab 7               alt+7                                                                  │",
        "│  Jump Tab 8               alt+8                                                                  │",
        "│  Jump Tab 9               alt+9                                                                  │",
        "│  Jump Tab 10              alt+0                                                                  │",
        "│  Filter                   /                                                                      │",
        "│  Go To Artist             g a                                                                    │",
        "│  Go To Album              g l                                                                    │",
        "│  Cancel                   esc                                                                    │",
        "│PLAYBACK                                                                                          │",
        "│  Play / Pause             space                                                                  │",
        "│  Next Track               n                                                                      │",
        "│  Prev Track               p                                                                      │",
        "│  Stop                     S                                                                      │",
        "│  Seek −5s                 [                                                                      │",
        "│  Seek +5s                 ]                                                                      │",
        "│  Seek −30s                {                                                                      │",
        "│press a key…                                                                                      │",
        "│             [Enter] remap    [d] reset    [x] unbind    [R] reset all    [Esc] close             │",
        "└──────────────────────────────────────────────────────────────────────────────────────────────────┘",
        "                                                                                                    ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Indexed(12), bg: Reset, underline: Reset, modifier: BOLD,
        x: 11, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 2, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Indexed(15), bg: Indexed(4), underline: Reset, modifier: NONE,
        x: 29, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 3, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 4, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 5, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 6, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 7, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 8, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 9, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 10, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 11, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 12, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 13, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 14, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 15, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 16, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 17, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 18, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 19, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 20, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 21, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 22, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 23, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 24, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 24, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 25, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 25, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 26, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 26, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 27, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 27, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 28, fg: Indexed(12), bg: Reset, underline: Reset, modifier: BOLD,
        x: 9, y: 28, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 28, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 29, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 29, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 30, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 30, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 31, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 31, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 32, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 32, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 33, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 33, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 34, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 34, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 35, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 35, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 36, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 36, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 37, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 37, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 86, y: 37, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 37, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 39, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
